# imageProcessingCpp

./: .gitignore  README.md
main/: CMakeLists.txt  histo.cpp  histo.h  imopen.cpp  imopen.h  main.cpp
main/headers/: entropyfilt.h  histo.h  hitmiss.h  imopen.h  strel.h
main/source/: entropyfilt.cpp  histo.cpp  hitmiss.cpp  imopen.cpp  strel.cpp
